[landing] fix investor card description container height
Summary: I actually did find a small bug with the investor card height. The height was still 56px, but when we decresed the font size/line height this 56px was too big. This diff fixes this bug by making the value of the height dynamically change as well based on the screen width. To determine these clamp values the same strategy from D8173 was used here.

Test Plan: Please see the before and after

Subscribers: ashoat, tomek

Differential Revision: https://phab.comm.dev/D8174

--- a/landing/investor-profile.css
+++ b/landing/investor-profile.css
@@ -39,7 +39,8 @@ p.description {
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 56px;
+  height: 3rem; /* 48px */
+  height: clamp(3rem, 2.857142857142857rem + 0.7142857142857143vw, 3.5rem);
 }
 
 p.involvement {
